--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~font-awesome/css/font-awesome.css";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body {
+    height:calc(100% - 26px);
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-weight: 300;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.section-checkbox {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+}
+
+.margin-checkbox {
+    margin: 0 10px;
+}
