sharing values between components using services

--- a/src/app/example/confirm-test/confirm-test.component.html
+++ b/src/app/example/confirm-test/confirm-test.component.html
@@ -1,3 +1,4 @@
-<p>
-  confirm-test works!
-</p>
+<p>component test</p>
+<p>title shared by service</p>
+<input type="button" (click)="changeTitle()" value="changeTitle"/>
+<app-confirm-dialog></app-confirm-dialog>
