adding value as input to component and event emission from component

--- a/src/app/example/confirm-test/confirm-test.component.html
+++ b/src/app/example/confirm-test/confirm-test.component.html
@@ -1,4 +1,4 @@
 <p>component test</p>
 <p>title shared by service</p>
 <input type="button" (click)="changeTitle()" value="changeTitle"/>
-<app-confirm-dialog></app-confirm-dialog>
+<app-confirm-dialog [content]="content" (confirmEvent)="receiveResultConfirm($event)"></app-confirm-dialog>
