--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -1,3 +1,8 @@
 <p>
   title: {{title}}
+</p>  
+<p>
+  content: {{content}}
 </p>
+<input type="button" (click)="emitConfirmEvent(true);" value="yes" />
+<input type="button" (click)="emitConfirmEvent(false);" value="no" />
