adding names for yes and no buttons and allow much rich html content

--- a/src/app/example/confirm-test/confirm-test.component.html
+++ b/src/app/example/confirm-test/confirm-test.component.html
@@ -1,1 +1,6 @@
-<app-confirm-dialog [button]="button" [title]="title" [content]="content" (confirmEvent)="receiveResultConfirm($event)"></app-confirm-dialog>
+<app-confirm-dialog [element]="element" 
+[title]="title" 
+[content]="content" 
+[confirmBt]="confirmBt" 
+[cancelBt]="cancelBt" 
+(confirmEvent)="receiveResultConfirm($event)"></app-confirm-dialog>
