--- a/src/app/shared/confirm-dialog/confirm-dialog-modal.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog-modal.component.html
@@ -1,9 +1,7 @@
 <h2 mat-dialog-title>{{data.title}}</h2>
-<mat-dialog-content>  
-  <p>content: {{data.content}}</p>
-  <p>Deseja continuar?</p>
+<mat-dialog-content #content>  
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-raised-button color="accent" mat-dialog-close>Não</button>
-  <button mat-button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>Sim</button>
+  <button mat-button mat-raised-button color="accent" mat-dialog-close>{{data.cancelBt}}</button>
+  <button mat-button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>{{data.confirmBt}}</button>
 </mat-dialog-actions>
